# pdf-tools

./: .gitignore  README.md  __main__.py  conftest.py  pyproject.toml  requirements-ocr.txt  requirements.txt  run-all-tests.sh
pdf_tools/: __init__.py  __main__.py  batch.py  cli.py  compress.py  concatenate.py  image_to_pdf.py  normalize.py  ocr.py  remove_images.py  split.py
pdf_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pdf_tools/utils/: file_helpers.py  logger.py
tests/: test_batch.py  test_compress.py  test_concatenate.py  test_file_helpers.py  test_image_to_pdf.py  test_normalize.py  test_ocr.py  test_remove_images.py  test_split.py
